22. Add (server side) option to show all compilation tracks when navigate into
    a compilation from a contributing artist.
23. Only show artist under MAI album list if different.
24. In desktop layout allow queue to be pinned/unpinned.
25. Add 'Automatic' theme, switches between Light/Dark based upon browser's
    dark mode setting.
26. Fix keyboard shortcuts not working when MAI view open.

3.5.5
-----
 1. Fix subtoolbar subtitle not always updating.
 2. Fix colour of lists in dialogs when using Black theme.
 3. Darker snackbar/toast background for Black theme.
 4. Set splitter width to zero when queue hidden.
 5. Tweak borders.
 6. Show track tech info, and background images, if enabled, for track list
    when click on album name in now-playing.
 7. If queue only has 1 item with no duration, then center the "1 Track" text.
 8. If "track" custom actions are defined, then always keep composer, etc,
    details in now-playing for use in actions.
 9. Only show "Go to composer", etc., items in now-playing context menu if
    configured to show relevant artist role.
10. Use alternative blur for now-playing backgroud, so that works with
    WebKitGTK.
11. Pre-cache HighDPI covers, thanks to Michael Herger.
12. Fix display of subtoolbar sub-title on biographies and album reviews.

3.5.4
-----
1. Fix missing album review for streaming services.
2. Remove commas from "performed by", etc. in desktop now-playing bar.

3.5.3
-----
1. Update translations.
2. Dim more player details in 'Manage players' dialog for switched off
   players.
3. Fix now-playing covers for old browsers (e.g. old iOS) that don't support
   CSS min()
4. Change "Performed by" to "performed by", etc.
5. Fix showing multiple composers, etc, in MAI view.
6. Fix cover URL in MAI.
7. Fix HTML appearing in disc selection dialog.
8. If LMS indicates multi-disc but album only has 1 then don't show choice
   dialog.

3.5.2
-----
1. Revert back to "img" tags for no-playing images, resolves loading of plugin